<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/flag"
            android:textSize="22sp"
            android:layout_margin="50sp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/quiz_image"
            android:src="@drawable/ic_flag_of_argentina"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            >
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"
                android:progress="5"
                android:max="9"
                android:minHeight="50dp"
                />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_0_9"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Apple"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            />

        <TextView
            android:id="@+id/tvOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Apple"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            />

        <TextView
            android:id="@+id/tvOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Apple"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            />

        <TextView
            android:id="@+id/tvOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Apple"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center"
            android:background="@drawable/default_option_border_bg"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/submit"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="10dp"/>

   </LinearLayout>

</ScrollView>